--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <main class="main main__index">
-        <img class="logo" src="/img/logo.png" alt="logo" width="329px" height="235px">
+        <img class="logo" src="../img/logo.png" alt="logo" width="329px" height="235px">
     </main>
 
     <footer class="footer">
