--- a/photo.html
+++ b/photo.html
@@ -68,15 +68,15 @@
             <div class="slider-thumbs swiper">
                 <ul class="slider-thumbs__list swiper-wrapper">
                     <li class="slider-thumbs__item swiper-slide">
-                        <img src="/photo/photo01-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
+                        <img src="photo/photo01-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
                             height="100px">
                     </li>
                     <li class="slider-thumbs__item swiper-slide">
-                        <img src="/photo/photo02-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
+                        <img src="photo/photo02-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
                             height="100px">
                     </li>
                     <li class="slider-thumbs__item swiper-slide">
-                        <img src="/photo/photo03-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
+                        <img src="photo/photo03-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
                             height="100px">
                     </li>
                 </ul>
