--- a/photo.html
+++ b/photo.html
@@ -53,13 +53,13 @@
         <div class="slider-main swiper">
             <ul class="slider-main__list swiper-wrapper">
                 <li class="slider-main__item swiper-slide">
-                    <img src="photo/photo01.jpg" alt="Photo" class="slider-main__img">
+                    <img src="../batman/photo/photo01.jpg" alt="Photo" class="slider-main__img">
                 </li>
                 <li class="slider-main__item swiper-slide">
-                    <img src="photo/photo02.jpg" alt="Photo" class="slider-main__img">
+                    <img src="../batman/photo/photo02.jpg" alt="Photo" class="slider-main__img">
                 </li>
                 <li class="slider-main__item swiper-slide">
-                    <img src="photo/photo03.png" alt="Photo" class="slider-main__img">
+                    <img src="../batman/photo/photo03.jpg" alt="Photo" class="slider-main__img">
                 </li>
             </ul>
         </div>
@@ -68,15 +68,15 @@
             <div class="slider-thumbs swiper">
                 <ul class="slider-thumbs__list swiper-wrapper">
                     <li class="slider-thumbs__item swiper-slide">
-                        <img src="photo/photo01-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
+                        <img src="../batman/photo/photo01-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
                             height="100px">
                     </li>
                     <li class="slider-thumbs__item swiper-slide">
-                        <img src="photo/photo02-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
+                        <img src="../batman/photo/photo02-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
                             height="100px">
                     </li>
                     <li class="slider-thumbs__item swiper-slide">
-                        <img src="photo/photo03-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
+                        <img src="../batman/photo/photo03-thumbs.jpg" alt="Photo" class="slider-thumbs__img" width="260px"
                             height="100px">
                     </li>
                 </ul>
