--- a/video.html
+++ b/video.html
@@ -50,44 +50,44 @@
             <ul class="slider-main__list swiper-wrapper">
                 <li class="slider-main__item swiper-slide">
                    <video class="slider-main__video" controls poster="video/trailer01.jpg">
-                       <source src="../batman/video/trailer01.webm" type="video/webm">
-                       <source src="../batman/video/trailer01.mp4" type="video/mp4">
+                       <source src="video/trailer01.webm" type="video/webm">
+                       <source src="video/trailer01.mp4" type="video/mp4">
                    </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/trailer02.jpg">
-                        <source src="../batman/video/trailer02.webm" type="video/webm">
-                        <source src="../batman/video/trailer02.mp4" type="video/mp4">
+                        <source src="video/trailer02.webm" type="video/webm">
+                        <source src="video/trailer02.mp4" type="video/mp4">
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/trailer03.jpg">
-                        <source src="../batman/video/trailer03.webm" type="video/webm">
-                        <source src="../batman/video/trailer03.mp4" type="video/mp4">
+                        <source src="video/trailer03.webm" type="video/webm">
+                        <source src="video/trailer03.mp4" type="video/mp4">
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/tizer01.jpg">
-                        <source src="../batman/video/tizer01.webm" type="video/webm">
-                        <source src="../batman/video/tizer01.mp4" type="video/mp4">
+                        <source src="video/tizer01.webm" type="video/webm">
+                        <source src="video/tizer01.mp4" type="video/mp4">
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/tizer02.jpg">
-                        <source src="../batman/video/tizer02.webm" type="video/webm">
-                        <source src="../batman/video/tizer02.mp4" type="video/mp4">
+                        <source src="video/tizer02.webm" type="video/webm">
+                        <source src="video/tizer02.mp4" type="video/mp4">
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/tizer03.jpg">
-                        <source src="../batman/video/tizer03.webm" type="video/webm">
-                        <source src="../batman/video/tizer03.mp4" type="video/mp4">
+                        <source src="video/tizer03.webm" type="video/webm">
+                        <source src="video/tizer03.mp4" type="video/mp4">
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/tizer04.jpg">
-                        <source src="../batman/video/tizer04.webm" type="video/webm">
-                        <source src="../batman/video/tizer04.mp4" type="video/mp4">
+                        <source src="video/tizer04.webm" type="video/webm">
+                        <source src="video/tizer04.mp4" type="video/mp4">
                     </video>
                 </li>
 
